--- a/css/styles-index.scss
+++ b/css/styles-index.scss
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6 {
     color: $color-white;
 }
 
-p, button {
+p, a, button {
     font-family: 'Rajdhani', sans-serif;
     font-weight: 400;
     color: $color-white;
@@ -44,7 +44,7 @@ hr {
     margin: 0 !important;
 }
 
-.text-white {
+.text-white, a:hover, a:visited {
     color: $color-white !important;
 }
 
@@ -74,16 +74,31 @@ button {
     color: $color-white !important;
 }
 
-.footer-text, .icon-white, .icon-white:visited, button {
+.footer-text, .icon-white, .icon-white:visited, a, a:visited, button {
     opacity: 0.5;
 }
 
-.footer-text:hover, .icon-white:hover, button:hover {
+.footer-text:hover, .icon-white:hover, a:hover, button:hover {
     opacity: 0.75;
 }
 
-.footer-text:active, .icon-white:active, button:active {
+.footer-text:active, .icon-white:active, a:active, button:active {
     opacity: 1;
+}
+
+#apod-video {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -95,7 +110,7 @@ button {
         padding: 1rem;
     }
 
-    p {
+    p, a {
         font-size: 1rem;
     }
     
@@ -118,7 +133,7 @@ button {
         padding: 1.667rem;
     }
 
-    p {
+    p, a {
         font-size: 1.125rem;
     }
     
@@ -141,7 +156,7 @@ button {
         padding: 2.333rem;
     }
 
-    p {
+    p, a {
         font-size: 1.25rem;
     }
 
@@ -164,7 +179,7 @@ button {
         padding: 3rem;
     }
 
-    p {
+    p, a {
         font-size: 1.375rem;
     }
 
@@ -187,7 +202,7 @@ button {
         padding: 3rem;
     }
 
-    p {
+    p, a {
         font-size: 1.5rem;
     }
 
@@ -210,7 +225,7 @@ button {
         padding: 3rem;
     }
 
-    p {
+    p, a {
         font-size: 1.5rem;
     }
 
