Update to "styles-index.scss" and "script-index.js".

--- a/css/styles-index.scss
+++ b/css/styles-index.scss
@@ -125,6 +125,10 @@ button {
     .zoom-200:hover {
         font-size: 150%;
     }
+
+    .zoom-300:hover {
+        font-size: 250%;
+    }
 }
 
 /* SM */
@@ -147,6 +151,10 @@ button {
 
     .zoom-200:hover {
         font-size: 162.5%;
+    }
+
+    .zoom-300:hover {
+        font-size: 262.5%;
     }
 }
 
@@ -171,6 +179,10 @@ button {
     .zoom-200:hover {
         font-size: 175%;
     }
+
+    .zoom-300:hover {
+        font-size: 275%;
+    }
 }
 
 /* LG */
@@ -194,6 +206,10 @@ button {
     .zoom-200:hover {
         font-size: 187.5%;
     }
+
+    .zoom-300:hover {
+        font-size: 287.5%;
+    }
 }
 
 /* XL */
@@ -216,6 +232,10 @@ button {
 
     .zoom-200:hover {
         font-size: 200%;
+    }
+
+    .zoom-300:hover {
+        font-size: 300%;
     }
 }
 
